--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
-        <h1>Hello World Julio!</h1>
+        <h1>Hello World Julio Diaz!</h1>
         <p>Prueba 2</p>
     </body>
 </html>
