--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,5 +7,7 @@
     <body>
         <h1>Hello World Julio Diaz!</h1>
         <p>Prueba 2</p>
+        <p>Prueba 3</p>
+        <p>Prueba 4</p>
     </body>
 </html>
